force-app/main/default/objects/ServiceAPIConfiguration__mdt/fields/Accept__c.field-meta.xml
<CustomField>
    <fullName>Accept__c</fullName>
    <description>Accept to be passed in the PAI call</description>
    <label>Accept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>