force-app/main/default/objects/ServiceAPIConfiguration__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <description>Content type passed in the MX API</description>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>